--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header {
     margin-top: 7px;
 }
 
-.popup .form .form-element button {
+.popup .form .button-row button {
     width: 100%;
     height: 40px;
     border: none;
