--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,78 @@ ul li span {
 
 }
 
+.botones {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.text-search h3{
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(0, 204, 255);
+    font-size: 3em;
+    margin-top: 100px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+
+.button-recipe {
+    width: 200px;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    background-color: rgb(82, 191, 241);
+    color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    margin:auto;
+}
+
+.button-recipe1 {
+    width: 200px;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    background-color: rgb(82, 191, 241);
+    color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: auto;
+}
+
+.card-search {
+    background-color: rgb(223, 253, 251);
+    margin: auto;
+    margin-bottom: 50px;
+    width: 19rem;
+}
+
+.card-search img {
+    width: 19rem;
+}
+
+.card-body {
+    text-align: center;
+}
+
+.card-body h5 {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
+.card-body p {
+    margin-bottom: 10px;
+}
+
+.card-body a {
+    color: rgb(3, 178, 201);
+    font-size: 1.2em;
+}
+
+
 @media (max-width: 991px) {
     .card {
         width: auto;
@@ -796,3 +868,4 @@ ul li span {
         padding: 20px;
     }
 }
+
