--- a/css/style.css
+++ b/css/style.css
@@ -1021,6 +1021,12 @@ ul li span {
 }
 
 
+.swal-text {
+    color:#08beb2;
+    font-size: 30px;
+    font-weight: 900;
+}
+
 @media screen and (max-width: 1000px) {
     .form-imc,
     .imc-img img {
